o update the build of magic core to use the bootstrap template from transit o remove production of templates as deliverables and generate as preferences instead o update remaining build procedures to use magic's preferences based templates o update module class to use URIs in preference to URLs o add migration info to the readme